welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: type mismatch;
 found   : (Int, Boolean)
 required: Boolean
  while((getX(),getY()!=(getMondeLargeur()-1,getMondeHauteur()-1)))
        ^